@@ -30,6 +30,7 @@ Loren Merritt
 Jeff Muizelaar
 Michael Niedermayer
 François Revol
+Peter Ross
 Måns Rullgård
 Roman Shaposhnik
 Dieter Shirley
