@@ -698,6 +698,8 @@ library:
 @item Nullsoft Video (NSV) format @tab    @tab X
 @item ADTS AAC audio @tab X @tab X
 @item Creative VOC @tab X @tab X @tab Created for the Sound Blaster Pro.
+@item American Laser Games MM  @tab    @tab X
+@tab Multimedia format used in games like Mad Dog McCree
 @end multitable
 
 @code{X} means that encoding (resp. decoding) is supported.
@@ -788,6 +790,7 @@ following image formats are supported:
 @item Autodesk Animator Studio Codec  @tab     @tab  X @tab fourcc: AASC
 @item Fraps FPS1             @tab     @tab  X @tab
 @item CamStudio              @tab     @tab  X @tab fourcc: CSCD
+@item American Laser Games Video  @tab    @tab X @tab Used in games like Mad Dog McCree
 @end multitable
 
 @code{X} means that encoding (resp. decoding) is supported.
